<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Headead</string>
    <string name="activity_drug_lookup_title">Ricerca medicinali</string>
    <string name="cd_arrow_back">Freccia indietro</string>
    <string name="activity_drug_lookup_hint">Cerca medicinali…</string>
    <string name="activity_drug_lookup_error">Si è verificato un errore nel caricamento.</string>
    <string name="RETRY">Riprova</string>
    <string name="cd_drug">Icona di un medicinale</string>
    <string name="shrug">¯\\_(ツ)_/¯</string>
    <string name="activity_drug_lookup_no_results">Nessun risultato trovato, prova a cercare qualcos\'altro.\nRicorda di specificare il nome del medicinale, non quello del principio attivo (es. Tachipirina, non paracetamolo).</string>
    <string name="activity_drug_lookup_no_query">Inizia a cercare scrivendo almeno tre caratteri.</string>
    <string name="fragment_drug_packaging_selector_title">Scegli il formato</string>
    <string name="fragment_drug_packaging_selector_error">Errore nel caricamento dei formati del farmaco, riprova.</string>
    <string name="fragment_drug_packaging_selector_no_formats">Nessun formato disponibile per il medicinale selezionato.</string>
    <string name="fragment_record_pain_title">Nuovo episodio</string>
    <string name="fragment_record_pain_location_header">Area del dolore</string>
    <string name="fragment_record_pain_intensity_header">Intensità del dolore</string>
    <string name="cd_headache_intensity">Icona dell\'intensità del dolore</string>
    <string name="cd_headache_location">Icona dell\'area del dolore</string>
    <string name="cd_headache_type">Icona del tipo di dolore</string>
    <string name="headache_intensity_low_long">Debole</string>
    <string name="headache_intensity_medium_long">Intermedio</string>
    <string name="headache_intensity_high_long">Forte</string>
    <string name="headache_type_a_long">sordo e cupo</string>
    <string name="headache_type_b_long">pulsante</string>
    <string name="headache_type_c_long">lancinante e trafittivo</string>
    <string name="headache_location_sx_long">lato sinistro</string>
    <string name="headache_location_dx_long">lato destro</string>
    <string name="headache_location_bilateral_long">bilaterale (a fascia)</string>
    <string name="headache_location_back_long">dietro (nuca)</string>
    <string name="cd_head">Icona della testa</string>
    <string name="fragment_record_pain_location_sx_short">SX</string>
    <string name="fragment_record_pain_location_sx_long">Lato sinistro</string>
    <string name="cd_selected">Icona della selezione</string>
    <string name="fragment_record_pain_location_dx_short">DX</string>
    <string name="fragment_record_pain_location_dx_long">Lato destro</string>
    <string name="fragment_record_pain_location_front_short">F</string>
    <string name="fragment_record_pain_location_front_long">Bilaterale (a fascia)</string>
    <string name="fragment_record_pain_location_back_short">D</string>
    <string name="fragment_record_pain_location_back_long">Dietro (nuca)</string>
    <string name="fragment_record_pain_type_header">Tipo di dolore</string>
    <string name="cd_headache_type_a">Icona del dolore sordo e cupo</string>
    <string name="cd_headache_type_b">Icona del dolore pulsante</string>
    <string name="cd_headache_type_c">Icona del dolore lancinante e trafittivo</string>
    <string name="fragment_record_pain_type_a_short">A</string>
    <string name="fragment_record_pain_type_a_long">Sordo e cupo</string>
    <string name="fragment_record_pain_type_b_short">B</string>
    <string name="fragment_record_pain_type_b_long">Pulsante</string>
    <string name="fragment_record_pain_type_c_short">C</string>
    <string name="fragment_record_pain_type_c_long">Lancinante e trafittivo</string>
    <string name="fragment_record_scenario_title">Contesto</string>
    <string name="cd_headache_context">Icona del contesto spaziale e temporale</string>
    <string name="fragment_record_scenario_datetime_header">Data e ora di inizio</string>
    <string name="cd_context_time">Icona dell\'ora di inizio</string>
    <string name="fragment_record_scenario_time_default">Scegli un orario…</string>
    <string name="cd_context_date">Icona della data di inizio</string>
    <string name="fragment_record_scenario_date_default">Scegli una data…</string>
    <string name="fragment_record_scenario_datetime_default">Adesso</string>
    <string name="fragment_record_scenario_datetime_custom">Scegli data e ora</string>
    <string name="cd_headache_geo">Luogo</string>
    <string name="fragment_record_scenario_geo_header">Luogo</string>
    <string name="fragment_record_scenario_geo_set">Imposta luogo di insorgenza</string>
    <string name="activity_record_geo_title">Scegli un luogo</string>
    <string name="dialog_geo_enable_gps_title">Azione richiesta</string>
    <string name="dialog_geo_enable_gps_message">Per ottenere automaticamente la posizione corrente è necessario abilitare il GPS dalle impostazioni. Vuoi proseguire?</string>
    <string name="dialog_geo_enable_gps_positive">Prosegui</string>
    <string name="dialog_geo_enable_gps_negative">Annulla</string>
    <string name="activity_record_geo_search_hint">Cerca luogo…</string>
    <string name="cd_close">Icona della chiusura</string>
    <string name="activity_record_geo_marker_snippet">Utilizza questa posizione</string>
    <string name="cd_marker">Icona del puntatore sulla mappa</string>
    <string name="dialog_geo_confirm_position_title">Conferma</string>
    <string name="dialog_geo_confirm_position_message">Vuoi utilizzare la posizione corrente?</string>
    <string name="dialog_geo_confirm_position_positive">OK</string>
    <string name="dialog_geo_confirm_position_negative">Annulla</string>
    <string name="activity_record_geo_no_results">Nessun risultato trovato.</string>
    <string name="cd_place">Icona del luogo</string>
    <string name="item_place_name_unknown">Luogo sconosciuto</string>
    <string name="activity_record_geo_geocoder_error">Ops, qualcosa non ha funzionato durante la ricerca. Riprova.</string>
    <string name="cd_headache_trigger">Icona dei fattori scatenanti</string>
    <string name="fragment_record_scenario_triggers_header">Fattori scatenanti</string>
    <string name="fragment_record_scenario_trigger_add">Modifica fattori scatenanti</string>
    <string name="activity_record_triggers_title">Fattori scatenanti</string>
    <string name="trigger_allergy">Reazione allergica</string>
    <string name="trigger_cold">Freddo eccessivo</string>
    <string name="trigger_effort">Sforzo eccessivo</string>
    <string name="trigger_fear">Carica emotiva</string>
    <string name="trigger_food">Indigestione</string>
    <string name="trigger_heat">Caldo eccessivo</string>
    <string name="trigger_hunger">Fame</string>
    <string name="trigger_light">Esposizione eccessiva alla luce</string>
    <string name="trigger_no_sleep">Carenza di sonno</string>
    <string name="trigger_noise">Rumore eccessivo</string>
    <string name="trigger_pain">Altri dolori</string>
    <string name="trigger_sleep">Sonno eccessivo</string>
    <string name="trigger_stress">Stress</string>
    <string name="trigger_travel">Spostamento</string>
    <string name="trigger_weather">Meteo</string>
    <string name="trigger_description_allergy">Reazione ad allergeni, accompagnata da rinite o altri sintomi</string>
    <string name="trigger_description_cold">Esposizione a correnti d\'aria o ambienti con aria condizionata accesa</string>
    <string name="trigger_description_effort">Sforzo fisico eccessivo, isolato o continuativo</string>
    <string name="trigger_description_fear">Tensione emotiva causata da sentimenti quali ansia, paura, eccitazione; l\'essere sovrappensiero</string>
    <string name="trigger_description_food">Pesantezza ed eventuali problemi di digestione provocati da un pasto troppo abbondante</string>
    <string name="trigger_description_heat">Esposizione ai raggi solari o a temperature elevate</string>
    <string name="trigger_description_hunger">Irregolarità dei pasti o digiuno prolungato</string>
    <string name="trigger_description_light">Sensazione di fastidio provocata dall\'esposizione continuativa alla luce</string>
    <string name="trigger_no_light">Buio</string>
    <string name="trigger_description_no_light">Esposizione insufficiente alla luce, permanenza prolungata in ambienti poco illuminati</string>
    <string name="fragment_pain_location_picker_title">Area del dolore</string>
    <string name="cd_head_outline">Rappresentazione della testa</string>
    <string name="cd_step_pain">Icona della sezione dedicata alle specifiche sul dolore</string>
    <string name="cd_step_context">Icona della fase dedicata a delineare il contesto</string>
    <string name="cd_step_medication">Icona della fase dedicata all\'inserimento dei medicinali</string>
    <string name="fragment_pain_location_picker_confirm">Conferma</string>
    <string name="dialog_main_list_view_grouping_header">Raggruppa</string>
    <string name="dialog_main_list_view_grouping_by_month">Per mese</string>
    <string name="dialog_main_list_view_grouping_by_pain_location">Per area del dolore</string>
    <string name="dialog_main_list_view_grouping_by_pain_intensity">Per intensità del dolore</string>
    <string name="dialog_main_list_view_grouping_by_pain_type">Per tipo di dolore</string>
    <string name="dialog_main_list_view_filter_by_drug_header">Filtra per medicinale</string>
    <string name="dialog_main_list_view_grouping_by_duration">Per durata</string>
    <string name="cd_fragment_datetime_picker_2_preset_just_started">Icona del mal di testa appena cominciato</string>
    <string name="fragment_datetime_picker_2_preset_just_started_header">Appena iniziato</string>
    <string name="fragment_datetime_picker_2_preset_just_started_description">Imposta solo data e ora di inizio al momento corrente, modifica successivamente per indicare la fine dell\'episodio.</string>
    <string name="cd_fragment_datetime_picker_2_preset_just_ended">Icona del mal di testa appena terminato</string>
    <string name="fragment_datetime_picker_2_preset_just_ended_header">Appena finito</string>
    <string name="fragment_datetime_picker_2_preset_just_ended_description">Imposta la data di fine al momento corrente e scegli il momento iniziale.</string>
    <string name="cd_fragment_datetime_picker_2_preset_past_episode">Icona di un episodio di mal di testa passato</string>
    <string name="fragment_datetime_picker_2_preset_past_episode_header">Episodio passato</string>
    <string name="fragment_datetime_picker_2_preset_past_episode_description">Episodio iniziato e concluso nel passato. Scegli i momenti iniziale e finale.</string>
    <string name="fragment_datetime_picker_2_presets_header">Tipo di episodio</string>
    <string name="fragment_end_moment_picker_one_day">+1</string>
    <string name="fragment_end_moment_picker_two_days">+2</string>
    <string name="fragment_end_moment_picker_three_days">+3</string>
    <string name="fragment_end_moment_picker_zero_days">+0</string>
    <string name="fragment_end_moment_picker_days_label">Indica se l\'orario finale si riferisce allo stesso giorno del momento iniziale o a uno, due o tre giorni dopo</string>
    <string name="mtrl_time_picker_no_start_end_value">-</string>
    <string name="mtrl_time_picker_start_label">Inizio</string>
    <string name="cd_part_of_day">Icona che indica la parte del giorno selezionata</string>
    <string name="dialog_day_offset_zero">+0 giorni (stessa giornata)</string>
    <string name="dialog_day_offset_one">+1 giorno</string>
    <string name="dialog_day_offset_two">+2 giorni</string>
    <string name="dialog_day_offset_three">+3 giorni</string>
    <string name="dialog_day_offset_custom">Scegli una data…</string>
</resources>