<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    android:paddingVertical="8dp"
    android:id="@+id/fragment_datetime_picker_collapsed"
    android:orientation="vertical">

    <revolver.headead.ui.views.typography.MontserratTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_datetime_picker_2_presets_header"
        android:textSize="12.8sp"
        android:textAllCaps="true"
        app:textStyle="semiBold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/fragment_datetime_picker_2_preset_just_started">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:src="@drawable/ic_timespan_start"
            android:contentDescription="@string/cd_fragment_datetime_picker_2_preset_just_started"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_datetime_picker_2_preset_just_started_header"
                android:textColor="@color/primaryText"
                android:textSize="16.8sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_datetime_picker_2_preset_just_started_description"
                android:textColor="@color/secondaryText"
                android:textSize="13.8sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/fragment_datetime_picker_2_preset_just_ended">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:src="@drawable/ic_timespan_end"
            android:contentDescription="@string/cd_fragment_datetime_picker_2_preset_just_ended"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_datetime_picker_2_preset_just_ended_header"
                android:textColor="@color/primaryText"
                android:textSize="16.8sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_datetime_picker_2_preset_just_ended_description"
                android:textColor="@color/secondaryText"
                android:textSize="13.8sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/fragment_datetime_picker_2_preset_past_episode">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:src="@drawable/ic_timespan_past"
            android:contentDescription="@string/cd_fragment_datetime_picker_2_preset_past_episode"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_datetime_picker_2_preset_past_episode_header"
                android:textColor="@color/primaryText"
                android:textSize="16.8sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_datetime_picker_2_preset_past_episode_description"
                android:textColor="@color/secondaryText"
                android:textSize="13.8sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>