<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/dialog_day_offset_zero"
        android:textColor="@color/blackOlive"
        android:textSize="16.8sp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/dialog_day_offset_zero"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/dialog_day_offset_one"
        android:textColor="@color/blackOlive"
        android:textSize="16.8sp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/dialog_day_offset_one"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/dialog_day_offset_two"
        android:textColor="@color/blackOlive"
        android:textSize="16.8sp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/dialog_day_offset_two"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/dialog_day_offset_three"
        android:textColor="@color/blackOlive"
        android:textSize="16.8sp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/dialog_day_offset_three"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/dialog_day_offset_custom"
        android:textColor="@color/blackOlive"
        android:textSize="16.8sp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/dialog_day_offset_custom"/>

    <revolver.headead.ui.views.MaterialCalendarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_day_offset_picker"
        android:visibility="gone"/>

</LinearLayout>