<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="344dp"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:id="@+id/fragment_end_moment_picker_days"
        app:checkedButton="@id/fragment_end_moment_picker_zero_days"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_end_moment_picker_zero_days"
            android:text="@string/fragment_end_moment_picker_zero_days"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_end_moment_picker_one_day"
            android:text="@string/fragment_end_moment_picker_one_day"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_end_moment_picker_two_days"
            android:text="@string/fragment_end_moment_picker_two_days"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_end_moment_picker_three_days"
            android:text="@string/fragment_end_moment_picker_three_days"
            style="?attr/materialButtonOutlinedStyle"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/fragment_end_moment_picker_days_label"
        android:textColor="@color/secondaryText"
        android:textSize="12.8sp"/>

    <include android:id="@+id/fragment_time_picker" layout="@layout/fragment_time_picker"/>

</LinearLayout>