<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleSpringBud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_head_outline"
            android:contentDescription="@string/cd_head_outline"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_head_full"
            app:tint="@color/blackOlive"
            android:contentDescription="@string/cd_step_pain"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_context"
            app:tint="@color/blackOlive"
            android:contentDescription="@string/cd_step_context"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_medication"
            app:tint="@color/blackOlive"
            android:contentDescription="@string/cd_step_medication"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>